...
    </customFonts>
    <scenes>
        <!--FeaturedStreamViewControllerId-->
        <scene sceneID="GZ5-tF-jPP">
            <objects>
                <viewControllerPlaceholder storyboardName="Feed" referencedIdentifier="FeaturedStreamViewControllerId" id="ow6-iM-KTh" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="1002" title="Featured" image="nav_maverick" selectedImage="nav_maverick" id="4AL-oe-mdz">
                        <color key="badgeColor" red="0.057245977220000001" green="0.16381826999999999" blue="0.20000582929999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    </tabBarItem>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fdt-aG-rEw" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1670" y="1523"/>
...
            </objects>
            <point key="canvasLocation" x="-1559" y="1621"/>
        </scene>
        <!--Challenges-->
        <scene sceneID="uwS-2z-tHh">
            <objects>
                <viewControllerPlaceholder storyboardName="Challenges" id="nCK-xu-SKP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="1001" title="Challenges" image="nav_challenges" selectedImage="nav_challenges" id="2Sl-6u-5G6">
                        <color key="badgeColor" red="0.057245977220000001" green="0.16381826999999999" blue="0.20000582929999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    </tabBarItem>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="FWx-Eu-Khs" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
            <point key="canvasLocation" x="-2099" y="2634"/>
        </scene>
        <!--MyStreamViewControllerId-->
        <scene sceneID="Z6L-R8-G8L">
            <objects>
                <viewControllerPlaceholder storyboardName="Feed" referencedIdentifier="MyStreamViewControllerId" id="aEs-tR-oN0" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Feed" image="nav_home" selectedImage="nav_home" id="d2g-on-u8j"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3ZZ-De-nQI" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-2130" y="1482"/>
        </scene>
        <!--Profile-->
...
