...
        case parent = "parent"
        
    }
    
    public enum ContactMode : String {
       
        case phone = "Text"
        case email = "Email"
        case facebook = "Facebook"
        case twitter = "Twitter"
   
    }
    
    public struct DeepLink {
...
