...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7uv-7Z-zZs">
                                <rect key="frame" x="0.0" y="20" width="40" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="1mI-NG-l3E"/>
                                    <constraint firstAttribute="width" constant="40" id="pN7-cc-EKe"/>
                                </constraints>
                                <state key="normal" image="back"/>
                                <connections>
                                    <action selector="backTapped:" destination="bWE-09-EUY" eventType="touchUpInside" id="WVn-1p-XsT"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="m0a-VF-3yu">
                                        <rect key="frame" x="207" y="0.0" width="207" height="50"/>
                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="17"/>
                                        <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <state key="selected">
                                            <color key="titleColor" red="0.1019607843" green="0.6588235294" blue="0.68627450980000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
...
